tests/snapshots/snapshots__manual_entry_choice_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxtime-snapshot.txt  •  15 ta DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @l… created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cl… due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth… contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer …                                  
   +personal         1      5   (B) Draft hiring rubric for senio… RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes… (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +heal… deck +work @laptop               
   @errands          4     (8)  NO PRIORITY  ───────────────────── due:2026-05-06                   
   @home            ┌ ✏ Manual Time Entry ─────────────────────────────────────┐                    
   @laptop          │        How would you like to describe this entry?        │                    
   @phone           │                                                          │                    
                    │  [n]ew blank entry  [a]dd to current task  [Esc] cancel  │                    
                    │                                                          │                    
                    └──────────────────────────────────────────────────────────┘                    
                           14       Plan Saturday hike with K. @p…                                  
                           15       Replace bathroom faucet washe…                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 MANUAL ENTRY   j/k · n new · t timer · T interrupt · x done15 open · 2026-05-06 · tuxtime 2026.7.5
