tests/snapshots/snapshots__nudge_task_picker_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxtime-snapshot.txt  •  15 ta DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @l… created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cl… due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth… contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer …                                  
   +personal         1      5   (B) Draft hiring rubric for senio… RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes… (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +heal… deck +work @laptop               
   @errands          4     (8)  NO PRIORITY  ───────────────────── due:2026-05-06                   
   @home             4      8       Migrate analytics to new pipe…                                  
   @laptop           4      9       Pay rent due:2026-05-15 rec:+…                                  
   @phone            3     10       Pick up dry cleaning @errands                                   
                           11       Schedule annual physical @pho…                                  
                           12       Read "Designing Data-Intensiv…                                  
                           13       Send thank-you note to mentor…                                  
                           14       Plan Saturday hike with K. @p…                                  
                           15       Replace bathroom faucet washe…                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 ▶ START TIMER   pick a task — Enter starts the timer on the highlighted row · / search · Esc back  
 START TIMER   Enter start timer on highlighted · j/k naviga15 open · 2026-05-06 · tuxtime 2026.7.3
