tests/snapshots/snapshots__project_management_search_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#2a2f38 bg=#1f232b}┌ Project Management {/}{fg=#6b7280 bg=#1f232b} by name {/}{fg=#2a2f38 bg=#1f232b}─────────────────────────────────────────────────────────────────────┐{/}
{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#2f3947 mod=bold} > +work{/}{bg=#1f232b}                                                                                          {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                                                                  {/}{fg=#2a2f38 bg=#1f232b}│{/}
{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────────────────────────────────────────────────────────────────┘{/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} PROJECTS {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}j/k nav · x archive · r rename ·{/}{fg=#6b7280 bg=#252a33}7 projects · 0 archived · 2026-05-06 · tuxtime 2026.7.8 {/}
