tests/snapshots/snapshots__project_management_search_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
┌ Project Management  by name ─────────────────────────────────────────────────────────────────────┐
│ > +work                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 PROJECTS   j/k nav · x archive · r rename ·7 projects · 0 archived · 2026-05-06 · tuxtime 2026.7.5
